<resources>
    <string name="app_name">Pressure Notes</string>

    <string name="add_record">Add record</string>
    <string name="view_chart">View chart</string>

    <string name="sys_label" translatable="false">SYS:</string>
    <string name="dia_label" translatable="false">DIA:</string>

    <string name="pulse_label">Pulse:</string>

    <string name="systolic_pressure">Systolic pressure</string>
    <string name="diastolic_pressure">Diastolic pressure</string>
    <string name="pulse">Pulse</string>

    <string name="save">Save</string>

    <string name="invalid">Invalid</string>

    <string name="should_not_be_empty">Should not be empty</string>
    <string name="too_big_value">Too big value</string>

    <string name="close">Close</string>

    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="all">All</string>

    <string name="delete">Delete</string>
    <string name="delete_record">Delete this record?</string>

    <string name="select_theme">Select theme</string>

    <string-array name="theme_variants">
        <item>Light</item>
        <item>Dark</item>
        <item>As in the system</item>
    </string-array>

    <string name="there_is_no_records">There is no records</string>
    <string name="arrhythmia">Arrhythmia</string>
    <string name="edit">Edit</string>
    <string name="comment">Comment</string>
    <string name="comment_with_colon">Comment:</string>
</resources>