<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.MaterialComponents.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/card_view_margin_top_bottom"
    android:layout_marginBottom="@dimen/card_view_margin_top_bottom"
    android:layout_marginStart="@dimen/card_view_margin_left_right"
    android:layout_marginEnd="@dimen/card_view_margin_left_right"
    app:cardBackgroundColor="?cardViewBackgroundColor"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="?accentTextColor"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_sys_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/item_sys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sys_label"
                android:textColor="?textColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_sys_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/item_sys"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/item_sys_indicator"
                android:layout_width="@dimen/pressure_indicator_size"
                android:layout_height="@dimen/pressure_indicator_size"
                android:layout_marginStart="32dp"
                android:background="@color/black"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/item_sys_value"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_dia_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/item_dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_label"
                android:textColor="?textColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_dia_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/item_dia"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/item_dia_indicator"
                android:layout_width="@dimen/pressure_indicator_size"
                android:layout_height="@dimen/pressure_indicator_size"
                android:layout_marginStart="32dp"
                android:background="@color/black"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/item_dia_value"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_pulse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pulse_label"
                android:textColor="?textColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_pulse_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/item_pulse"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/item_arrhythmia_image_view"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/ic_heartbeat"
            app:tint="@color/red" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>